--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,74 @@
-.App {
-  text-align: center;
+.articles-body {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 15%;
+}
+
+.article-card {
+  background-color: #fafafa;
+  border-radius: 6px;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  height: 325px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1rem;
+  padding: 0;
+  text-align: left;
+  transition: 0.3s;
+  width: 350px;
+}
+
+.article-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.form {
+  position: absolute;
+  width: 80%;
+  top: 20%;
+  left: 10%;
+  justify-content: space-around;
+  align-items: center;
+
+  margin: 0 auto;
+}
+
+.form .form input {
+  padding: 0.35rem 0.25rem;
+  display: block;
+  width: 50%;
+  font-family: merriweather;
+  font-size: 1em;
+  margin: 0 auto;
+}
+
+.form-btn {
+  height: 40px;
+  min-width: 134px;
+  padding: 0.54rem 0.75rem;
+  background-color: #2954af !important;
+  color: white;
+  border-radius: 4px;
+  margin: -0.1rem;
+  border: 1px solid #1843af;
+}
+
+.nav-wrapper {
+  background-color: #2954af;
+}
+
+.waves-effect {
+  z-index: 0;
+}
+
+.button .article-card:focus {
+  background-color: white;
 }
