--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,15 @@
 .button .article-card:focus {
   background-color: white;
 }
+
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.ReactModal__Content {
+  width: 50%;
+  min-width: 300px;
+  height: 50%;
+  min-height: 500px;
+  margin: 0 auto;
+}
